# aciq

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  analyze_weights.py  eda_weights.py  fit_distributions.py  optimal_thresholds.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
aciq/: distributions.py  mse.py  onnx_io.py  quantization.py  statistics.py
examples/: analyze_weights.py
test/: helpers.py  test_distributions.py  test_gaussian.py
test/unit/: test_distribution_statistics.py  test_distribution_stats.py  test_distributions.py  test_distributions_failures.py  test_quantization.py
