[project]
name = "aciq"
version = "0.1.0"

classifiers = ["Programming Language :: Python :: 3"]

license = 'MIT'
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "onnx",
  "numpy",
  "scipy",
  "matplotlib",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = [
  'aciq'
]

[project.optional-dependencies]
linting = [
  "mypy==1.19.1",
  "typing-extensions",
  "ruff==0.14.10",
  "typos",
]
testing = [
  "pytest",
]
pre_commit = [
  "pre-commit",
]

[tool.mypy]
warn_unused_configs = true
files = ["aciq", "test", "examples"]
ignore_missing_imports = true
check_untyped_defs = true
explicit_package_bases = true
warn_unreachable = true
warn_redundant_casts = true
strict_equality = true
warn_unused_ignores = true


[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
preview = true
target-version = "py311"
line-length = 150
indent-width = 2
exclude = [
  ".git/"
]

[tool.ruff.lint]
select = [
  "F",  # Pyflakes
  "W6",
  "E71",
  "E72",
  "E112",   # no-indented-block
  "E113",   # unexpected-indentation
  "E203",   # whitespace-before-punctuation
  "E272",   # multiple-spaces-before-keyword
  "E275",   # missing-whitespace-after-keyword
  "E303",   # too-many-blank-lines
  "E304",   # blank-line-after-decorator
  "E501",   # line-too-long
  # "E502",
  "E702",   # multiple-statements-on-one-line-semicolon
  "E703",   # useless-semicolon
  "E731",   # lambda-assignment
  "W191",   # tab-indentation
  "W291",   # trailing-whitespace
  "W293",   # blank-line-with-whitespace
  "UP039",  # unnecessary-class-parentheses
  "C416",   # unnecessary-comprehension
  "RET506", # superfluous-else-raise
  "RET507", # superfluous-else-continue
  "A",      # builtin-variable-shadowing, builtin-argument-shadowing, builtin-attribute-shadowing
  "FURB110",# if-exp-instead-of-or-operator
  "RUF018", # assignment-in-assert
]
